--- a/ezlearning-frontend/UI/course-detail.html
+++ b/ezlearning-frontend/UI/course-detail.html
@@ -242,19 +242,19 @@
             <div class="row" style="height: 100%;">
                 <div class="col-sm-9">
                     <div class="row" style="height: 100%; padding-right: 25px;">
-                        <div class="col-sm-3 tab-enabled">
+                        <div id="info-tab" class="col-sm-3 tab tab-enabled">
                             <img src="res/icons/course-detail/info.png" width="23px" class="tab-icon">
                             Thông tin chung
                         </div>
-                        <div class="col-sm-3 tab-disabled">
+                        <div id="lecture-tab" class="col-sm-3 tab tab-disabled">
                             <img src="res/icons/course-detail/lecture.png" width="17px" class="tab-icon">
                             Giáo trình
                         </div>
-                        <div class="col-sm-3 tab-disabled">
+                        <div id="teacher-tab" class="col-sm-3 tab tab-disabled">
                             <img src="res/icons/course-detail/teacher.png" width="19px" class="tab-icon">
                             Giảng viên
                         </div>
-                        <div class="col-sm-3 tab-disabled">
+                        <div id="rating-tab" class="col-sm-3 tab tab-disabled">
                             <img src="res/icons/course-detail/rates.png" width="21px" class="tab-icon">
                             Đánh giá
                         </div>
@@ -269,20 +269,69 @@
     </div>
 
     <!--Payment-->
-    <div id="payment" class="container course-detail" style="">
+    <div id="payment" class="container course-detail">
         <div class="row">
             <div class="col-sm-9"></div>
 
             <div class="col-sm-3" style="padding-left: 0px; padding-right: 0px; right: 0px;">
-                <div class="tab-content">
+                <div class="tab-content" style="padding: 30px;">
                     <div class="cover-content">
                         <img src="res/imgs/courses/course5.png" class="cover-content-img">
                     </div>
-                    <div>
+                    <div class="price-sections">
                         <div style="float: left; padding-top: 10px;">
-                                <img src="res/icons/course-detail/payment-color.png" width="22px">
+                            <img src="res/icons/course-detail/payment-color.png" width="22px">
                         </div>
                         <div class="course-price">599,000 đ</div>
+                    </div>
+                    <div class="price-sections discount-section-seperator" style="margin-top: 50px;">
+                        <div class="discount-title">
+                            Mã khuyến mãi
+                        </div>
+                        <div style="margin-top: 10px">
+                            <input class="input-small" type="text" style="width: 65%;">
+                            <button class="small-btn" style="margin-left: 10px;">Nhập</button>
+                        </div>
+                    </div>
+                    <div class="add-to-cart">
+                        THÊM VÀO GIỎ
+                    </div>
+                </div>
+                <div class="tab-content course-addinfo" style="margin-top: 15px;">
+                    <div class="container" style="padding: 0px">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="res/icons/course-detail/cat.png" width="16px" style="margin-right: 10px">
+                                <span class="course-addin-title">Thể loại</span>
+                            </div>
+                            <div class="col-sm-6 text-right">
+                                Lập trình
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="res/icons/course-detail/lecture-count.png" width="10px" style="margin-right: 10px">
+                                <span class="course-addin-title">Số bài học</span>
+                            </div>
+                            <div class="col-sm-6 text-right">
+                                24
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="res/icons/course-detail/created-date.png" width="14px" style="margin-right: 10px">
+                                <span class="course-addin-title">Ngày mở</span>
+                            </div>
+                            <div class="col-sm-6 text-right">
+                                15/11/2018
+                            </div>
+                        </div>
+                        <div class="row">
+                                <div class="col-sm-12">
+                                    <img src="res/icons/course-detail/life.png" width="14px" style="margin-right: 10px">
+                                    <span class="course-addin-title">Học trọn đời</span>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -298,7 +347,7 @@
 
                 <!--Info-->
 
-                <div class="tab-content">
+                <div id="info" class="tab-content">
                     <div class="tab-content-title">
                         Thông tin chung
                     </div>
@@ -328,9 +377,9 @@
 
                 <!--Lecture-->
 
-                <div class="tab-content">
+                <div id="lecture" class="tab-content">
                     <div class="tab-content-title">
-                        Thông tin chung
+                        Giáo trình
                     </div>
                     <div class="row" style="margin-bottom: 15px;">
                         <div class="col-sm-10 parent-title">
@@ -395,6 +444,217 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!--Teacher-->
+
+                <div id="teacher" class="tab-content">
+                    <div class="tab-content-title">
+                        Giảng viên
+                    </div>
+                    <div class="teacher-info container">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img src="res/imgs/teachers/teacher3.png" class="teacher-ava">
+                            </div>
+                            <div class="col-sm-9" style="margin-left: -30px;">
+                                <div class="row">
+                                    <div class="col-sm-6" style="padding-top: 20px;">
+                                        <div class="teacher-title">Giảng viên</div>
+                                        <div class="teacher-name">Phan Văn Luân</div>
+                                        <div>
+                                            <img src="res/icons/ratings/rate-full.png" width="18px">
+                                            <img src="res/icons/ratings/rate-full.png" width="18px">
+                                            <img src="res/icons/ratings/rate-full.png" width="18px">
+                                            <img src="res/icons/ratings/rate-full.png" width="18px">
+                                            <img src="res/icons/ratings/rate-outline.png" width="18px">
+                                            <span class="teacher-rate-count">(07)</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 info-seperator" style="padding-top: 20px;">
+                                        <p>
+                                            Học viên:
+                                            <span class="teacher-count">507</span>
+                                        </p>
+                                        <p>
+                                            Khóa học:
+                                            <span class="teacher-count">3</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        Thầy Phan Văn Luân đã từng làm việc tại FPT với vai trò technical leader, đồng thời là giảng
+                        viên đào tạo các khóa fresher của FOT.<br>
+                        Làm việc tại LINE cũng là team leader đội phát triển ứng dụng Mobile.<br>
+                        Là founder của trang web chuyên chia sẻ các kỹ năng lập trình web (website: laptrinh.io).<br>
+                        Tham gia và các dự án mã nguồn mở trên thế giới liên quan tới các nền tảng framework như
+                        Laravel, lonic, Framework, Codeconcept JS.<br>
+                        Là một blogger về kỹ thuật chia sẻ hướng dẫn một số thủ thuật lập trình trên trang blog cá nhân
+                        (website: blog.petehouston.com).
+                    </div>
+                </div>
+
+                <!--Rating-->
+
+                <div id="rating" class="tab-content">
+                    <div class="tab-content-title">
+                        Đánh giá
+                    </div>
+
+                    <!--Rates-->
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-5 rate-seperator" style="text-align: center;">
+                                <div class="rate-avg">4.1</div>
+                                <div>
+                                    <img src="res/icons/ratings/rate-full-large.png" width="34px" style="margin: 0px 3px 10px 3px;">
+                                    <img src="res/icons/ratings/rate-full-large.png" width="34px" style="margin: 0px 3px 10px 3px;">
+                                    <img src="res/icons/ratings/rate-full-large.png" width="34px" style="margin: 0px 3px 10px 3px;">
+                                    <img src="res/icons/ratings/rate-full-large.png" width="34px" style="margin: 0px 3px 10px 3px;">
+                                    <img src="res/icons/ratings/rate-outline-large.png" width="34px" style="margin: 0px 3px 10px 3px;">
+                                </div>
+                                <span class="rate-count">7 đánh giá</span>
+                            </div>
+                            <div class="col-sm-7" style="padding-left: 40px !important;">
+                                <div id="5-star" class="row rate-detail">
+                                    <div class="col-sm-2" style="padding-right: 0px;">
+                                        5
+                                        <img src="res/icons/ratings/rate-full.png" width="22px" style="margin: 0px 5px">
+                                    </div>
+                                    <div class="col-sm-8" style="padding-top: 7px;">
+                                        <div class="rate-pipe-bg">
+                                            <div class="rate-pipe" style="width: 71.43%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <b>5</b>
+                                    </div>
+                                </div>
+                                <div id="4-star" class="row rate-detail">
+                                    <div class="col-sm-2" style="padding-right: 0px;">
+                                        4
+                                        <img src="res/icons/ratings/rate-full.png" width="22px" style="margin: 0px 5px">
+                                    </div>
+                                    <div class="col-sm-8" style="padding-top: 7px;">
+                                        <div class="rate-pipe-bg">
+                                            <div class="rate-pipe" style="width: 0%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <b>0</b>
+                                    </div>
+                                </div>
+                                <div id="3-star" class="row rate-detail">
+                                    <div class="col-sm-2" style="padding-right: 0px;">
+                                        3
+                                        <img src="res/icons/ratings/rate-full.png" width="22px" style="margin: 0px 5px">
+                                    </div>
+                                    <div class="col-sm-8" style="padding-top: 7px;">
+                                        <div class="rate-pipe-bg">
+                                            <div class="rate-pipe" style="width: 14.29%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <b>1</b>
+                                    </div>
+                                </div>
+                                <div id="2-star" class="row rate-detail">
+                                    <div class="col-sm-2" style="padding-right: 0px;">
+                                        2
+                                        <img src="res/icons/ratings/rate-full.png" width="22px" style="margin: 0px 5px">
+                                    </div>
+                                    <div class="col-sm-8" style="padding-top: 7px;">
+                                        <div class="rate-pipe-bg">
+                                            <div class="rate-pipe" style="width: 0%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <b>0</b>
+                                    </div>
+                                </div>
+                                <div id="1-star" class="row rate-detail">
+                                    <div class="col-sm-2" style="padding-right: 0px;">
+                                        1
+                                        <img src="res/icons/ratings/rate-full.png" width="22px" style="margin: 0px 5px">
+                                    </div>
+                                    <div class="col-sm-8" style="padding-top: 7px;">
+                                        <div class="rate-pipe-bg">
+                                            <div class="rate-pipe" style="width: 14.29%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <b>1</b>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Comments-->
+
+                    <div class="container comment-seperator">
+                        <div class="row comment-margin">
+                            <div class="col-sm-2">
+                                <img src="res/imgs/students/student2.png" class="rater-ava">
+                            </div>
+                            <div class="col-sm-10" style="margin-left: -20px !important;">
+                                <div class="rater-name">Nguyễn Công Thành</div>
+                                <div>
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                </div>
+                                <div class="rater-cmt">
+                                    Bài giảng chất lượng, dễ hiểu, mong rằng thầy sẽ có nhiều bài giảng dạy nâng cao
+                                    hơn nữa :v
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row comment-margin">
+                            <div class="col-sm-2">
+                                <img src="res/imgs/students/student1.png" class="rater-ava">
+                            </div>
+                            <div class="col-sm-10" style="margin-left: -20px !important;">
+                                <div class="rater-name">Nguyễn Công Thành</div>
+                                <div>
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-full.png" width="20px">
+                                    <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                </div>
+                                <div class="rater-cmt">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Your comment-->
+
+                    <div class="container" style="padding: 0px; margin-top: -15px;">
+                        <div class="your-comment-title">Đánh giá của bạn</div>
+                        <div class="row">
+                            <div class="col-sm-3" style="padding-top: 5px;">
+                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                            </div>
+                            <div class="col-sm-9" style="padding:0px; margin-left: -40px !important; max-width: 80%; flex-basis: 80%;">
+                                <input class="input-normal" type="text" style="width: 87%">
+                                <button id="sign-up-submit" class="big-button" style="height: 38px; margin-left: 15px;">Gửi</button>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
